# flame_company_project

./: CAMERA_TROUBLESHOOTING.md  OPENCV_TROUBLESHOOTING.md  README.md  index.html  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/lumi_project/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  opencv_processor.cpp  opencv_processor.h
app/src/main/java/com/example/lumi_project/: CameraController.kt  FrameProcessor.kt  MainActivity.kt
app/src/main/java/com/example/lumi_project/ui/theme/: Color.kt  GLRenderer.kt  GLTextureHandler.kt  ShaderUtils.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/lumi_project/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
src/: App.tsx
src/lib/: lumi.ts
